fixed overlapping flash message with animal hero image

--- a/app/assets/stylesheets/style.css
+++ b/app/assets/stylesheets/style.css
@@ -45,7 +45,6 @@ ul {
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
-  margin-top: -100px;
 } 
 
 div.container {
